k8s/web-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blender-web-api
  labels:
    app: blender-web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blender-web-api
  template:
    metadata:
      labels:
        app: blender-web-api
    spec:
      containers:
        - name: blender-web-api
          image: svane222/blender-web-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: blender-web-api-service
spec:
  selector:
    app: blender-web-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
